err/bnclient.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bnclient'...
Compiling './lib/python3.5/site-packages/bnclient/bnclient.py'...
***   File "./lib/python3.5/site-packages/bnclient/bnclient.py", line 52
    print 'Usage: %s [options] hostname[:port]' % self._sName
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnclient/conn.py'...
***   File "./lib/python3.5/site-packages/bnclient/conn.py", line 32
    print 'Netconf Connection: Missing hostname!'
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnclient/param.py'...
***   File "./lib/python3.5/site-packages/bnclient/param.py", line 46
    print 'Invalid parameter of option \'%s\'' % opt[1][0]
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bnclient/rpc'...
Compiling './lib/python3.5/site-packages/bnclient/rpc/close_session.py'...
***   File "./lib/python3.5/site-packages/bnclient/rpc/close_session.py", line 27
    print 'RPC <close-session> failed:'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnclient/rpc/copy_config.py'...
***   File "./lib/python3.5/site-packages/bnclient/rpc/copy_config.py", line 39
    print 'RPC <copy-config> failed:'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnclient/rpc/delete_config.py'...
***   File "./lib/python3.5/site-packages/bnclient/rpc/delete_config.py", line 34
    print 'RPC <delete-config> failed:'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnclient/rpc/edit_config.py'...
***   File "./lib/python3.5/site-packages/bnclient/rpc/edit_config.py", line 67
    print 'RPC <edit-config> failed:'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnclient/rpc/get.py'...
***   File "./lib/python3.5/site-packages/bnclient/rpc/get.py", line 33
    print 'RPC <get> failed:'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnclient/rpc/get_config.py'...
***   File "./lib/python3.5/site-packages/bnclient/rpc/get_config.py", line 36
    print 'RPC <get-config> failed:'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnclient/rpc/get_configuration.py'...
***   File "./lib/python3.5/site-packages/bnclient/rpc/get_configuration.py", line 29
    print 'RPC <get-configuration> failed:'
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnclient/rpc/get_interface_information.py'...
***   File "./lib/python3.5/site-packages/bnclient/rpc/get_interface_information.py", line 45
    print 'RPC <get-interface-information> failed:'
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnclient/rpc/kill_session.py'...
***   File "./lib/python3.5/site-packages/bnclient/rpc/kill_session.py", line 34
    print 'RPC <kill-session> failed:'
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnclient/rpc/lock.py'...
***   File "./lib/python3.5/site-packages/bnclient/rpc/lock.py", line 34
    print 'RPC <lock> failed:'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnclient/rpc/unlock.py'...
***   File "./lib/python3.5/site-packages/bnclient/rpc/unlock.py", line 34
    print 'RPC <unlock> failed:'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bnclient-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
